kubernetes/apps/kubevirt/bluesky/app/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluesky
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
  - name: ssh
    port: 22
    targetPort: 22
  selector:
    kubevirt.io/domain: bluesky
  type: LoadBalancer
  loadBalancerIP: 10.0.4.80
---
apiVersion: v1
kind: Service
metadata:
  name: bluesky-internal
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
  selector:
    kubevirt.io/domain: bluesky
  type: ClusterIP
