kubernetes/apps/kubevirt/bluesky/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluesky
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: networking-cloudflare-only@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-production-internal
    external-dns.alpha.kubernetes.io/target: quietwarrior.home.${INTERNAL_DOMAIN}
  namespace: kubevirt
spec:
  ingressClassName: traefik-internal
  rules:
  - host: pds.${INTERNAL_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: bluesky-internal
            port:
              number: 443
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - pds.${INTERNAL_DOMAIN}
    secretName: bluesky-tls
